syntax = "proto3";

option csharp_namespace = "Protos";
option go_package = "/rpc";

package rpc;
import "google/protobuf/wrappers.proto";

service LogService {
  rpc GetLog (LogRequest) returns (Log);
  rpc GetAllLogs (google.protobuf.Int64Value) returns (LogList);
  rpc CreateLog (Log) returns (Log);
}

message Log {
  int64 id = 1;
  int64 userId = 2;
  int64 entityId = 3;
  int64 unix = 4;
}

message LogRequest {
  int64 id = 1;
  int64 userId = 2;
}

message LogList {
  repeated Log logs = 1;
}